syntax = "proto3";
package com.tim.common.protos;
import "common.proto";
option java_outer_classname = "Conversation";

// 会话操作请求  消息ID使用客户端生成
message ConverReq {
  uint64 id = 1; // 消息ID
  OperationType type = 2;
  string conversationId = 3; // 会话ID
}

enum OperationType {
  DETAIL = 0;
  ALL = 1;
}

// 会话操作结果
message ConverAck {
  uint64 id = 1; // 消息ID
  Code code = 3; // 返回码
  uint64 time = 4; // 时间
  ConverInfo conversation = 5;
  repeated ConverInfo conversationList = 6;
}

// 会话详情
message ConverInfo {
  string converId = 1; // 会话ID
  ConverType type = 2; // 会话类型
  repeated string uid = 3; // 单聊会话 用户列表
  string groupId = 4; //  群会话 群ID
  uint64 unCount = 5; // 未读数
  MessageContent lastContent = 6; // 最后一条消息
}


