syntax = "proto3";
package com.tim.common.protos;
import "common.proto";
option java_outer_classname = "Conversation";

// 会话操作请求  消息ID使用客户端生成
message ConversationReq {
  uint64 id = 1; // 消息ID
  OperationType type = 2;
  string conversasionId = 3; // 会话ID
}

enum OperationType {
  DETAIL = 0;
  ALL = 1;
}

// 会话操作结果
message ConversationAck {
  uint64 id = 1; // 消息ID
  Code code = 3; // 返回码
  uint64 time = 4; // 时间
  ConversationDetail conversation = 5;
  repeated ConversationDetail conversationList = 6;

}

// 会话详情
message ConversationDetail {
  string conversasionId = 1; // 会话ID
  ConversationType type = 2; // 会话类型
  string targetId = 3; // 单聊会话 用户ID 群会话 群ID
  uint64 unreadCount = 5; // 未读数
  MessageContent lastContent = 6; // 最后一条消息
}


